fixed issue: output size now auto-adjusted every time

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ things we want to do before the official announcement:
  * disable shortcuts until all js has been loaded
  * use flex layouts
  * add favicon
+ * parse output and autocheck for attributes
  * add chapters to the editor
  * add a simple editor
  * encode question number in url
